Replan - PathB default display of fields to be fixed (create a plane with buying basket path b --> replan it from buying basket upload --> upload the buying basket file --> then second tab is highlighted and showing first tab information & Mark as complete and Prioritize popup to match the design provided by client&GenreLevel   Budget Allocation Sheet successfully Uploaded label should be aligned in the   center &There Should   be Space after “You” in the label, when Accelerator file is Uploaded, but if   I go back to Myplans and comeback the label is appeared correctly

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -566,3 +566,8 @@ blink {
 /* .swal-button--confirm{
     margin-left: 5px !important;
 }  */
+
+.swal-button--cancel {
+box-shadow:  none !important;
+-moz-box-shadow:  none !important;
+}
